[FIX] website_event: fix search button z-index issue
Before this commit:
-search button was displaying on the top of the "portal menu".
 it should be "under" the "portal menu"

After this commit:
-search button displaying properly now under the portal menu.

TaskID - 2229057

--- a/addons/website_event/static/src/scss/website_event.scss
+++ b/addons/website_event/static/src/scss/website_event.scss
@@ -233,3 +233,8 @@
         z-index: $zindex-dropdown - 1;
     }
 }
+
+.search_box_zindex
+{
+    z-index:0;
+}
